syntax = "proto3";

option java_package = "com.example.server";
option java_multiple_files = true;

service UserService {
  rpc getUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 userId = 1;
}

message UserResponse {
  int32 userId = 1;
  string username = 2;
  
}

